# asr-transcribe-and-tts-polly-demo

./: LICENSE  README.md
polly-python/: demo01.py  text-to-audio.py  text-to-file.py
transcribe-cpp/: CMakeLists.txt  build_static.sh  simple_main.cpp  transcribe_helper.cpp  transcribe_helper.h
transcribe-java/: pom.xml
transcribe-java/src/main/java/com/example/transcribe/: TranscribeStreamingDemoApp.java
transcribe-python/: input_from_file.py  input_from_mic.py
